package main

import (
	"context"
	"errors"
	"fmt"
	"log"
	"net"
	"net/http"
	"os"
	"os/signal"
	"sync"
	"syscall"
	"time"

	"github.com/go-chi/chi/v5"
	"github.com/go-chi/chi/v5/middleware"
	"github.com/google/uuid"
	orderV1 "github.com/pptkna/rocket-factory/shared/pkg/openapi/order/v1"
	inventoryV1 "github.com/pptkna/rocket-factory/shared/pkg/proto/inventory/v1"
	paymentV1 "github.com/pptkna/rocket-factory/shared/pkg/proto/payment/v1"
	payment_v1 "github.com/pptkna/rocket-factory/shared/pkg/proto/payment/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

const (
	httpPort = "8080"
	// –¢–∞–π–º–∞—É—Ç—ã –¥–ª—è HTTP-—Å–µ—Ä–≤–µ—Ä–∞
	readHeaderTimeout = 5 * time.Second
	shutdownTimeout   = 10 * time.Second

	inventoryServerAddress = "localhost:50051"
	paymentServerAddress   = "localhost:50052"
)

var (
	notFoundError = errors.New("not found")
	conflictError = errors.New("conflict error")
)

type orderStorage struct {
	mu           sync.RWMutex
	orders       map[string]*orderV1.OrderDto
	lockedOrders map[string]struct{}
}

func NewOrderStorage() *orderStorage {
	return &orderStorage{
		orders:       make(map[string]*orderV1.OrderDto),
		lockedOrders: make(map[string]struct{}),
	}
}

// –°–æ–∑–¥–∞–Ω–∏–µ –∑–∞–∫–∞–∑–∞
func (s *orderStorage) CreateOrder(uuid string, order *orderV1.OrderDto) error {
	s.mu.Lock()
	defer s.mu.Unlock()

	if _, exist := s.orders[uuid]; exist {
		return conflictError
	}

	s.orders[uuid] = order

	return nil
}

// –ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –∑–∞–∫–∞–∑–µ
func (s *orderStorage) GetOrder(uuid string) (*orderV1.OrderDto, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	order, ok := s.orders[uuid]
	if !ok {
		return nil, notFoundError
	}

	copy := *order
	return &copy, nil
}

// –ë–ª–æ–∫–∏—Ä–æ–≤–∫–∞ –∑–∞–∫–∞–∑–∞ –ø–µ—Ä–µ–¥ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ–º
func (s *orderStorage) LockOrder(uuid string) (*orderV1.OrderDto, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	order, ok := s.orders[uuid]
	if !ok {
		return nil, notFoundError
	}

	if _, locked := s.lockedOrders[uuid]; locked {
		return nil, conflictError
	}

	s.lockedOrders[uuid] = struct{}{}

	copy := *order

	return &copy, nil
}

// –†–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∫–∞ –∑–∞–∫–∞–∑–∞, –µ—Å–ª–∏ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –Ω–µ —Ç—Ä–µ–±—É–µ—Ç—Å—è
func (s *orderStorage) UnlockOrder(uuid string) {
	s.mu.Lock()
	defer s.mu.Unlock()

	delete(s.lockedOrders, uuid)
}

// –û–±–Ω–≤–ª–µ–Ω–∏–µ –∑–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–Ω–æ–≥–æ –∑–∞–∫–∞–∑–∞ –∏ –ø–æ—Å–ª–µ–¥—É—é—â–∞—è —Ä–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∫–∞
func (s *orderStorage) UpdateLockedOrder(uuid string, update func(o *orderV1.OrderDto)) error {
	s.mu.Lock()
	defer s.mu.Unlock()

	if _, locked := s.lockedOrders[uuid]; !locked {
		return conflictError
	}

	order, ok := s.orders[uuid]
	if !ok {
		delete(s.lockedOrders, uuid)
		return notFoundError
	}

	defer delete(s.lockedOrders, uuid)

	update(order)

	return nil
}

type orderHandler struct {
	storage                *orderStorage
	inventoryServiceClient inventoryV1.InventoryServiceClient
	paymentServiceClient   paymentV1.PaymentServiceClient
}

func NewOrderHandler(storage *orderStorage, inventoryServiceClient inventoryV1.InventoryServiceClient, paymentServiceClient paymentV1.PaymentServiceClient) *orderHandler {
	return &orderHandler{
		storage,
		inventoryServiceClient,
		paymentServiceClient,
	}
}

func (h *orderHandler) GetOrderByOrderUuid(_ context.Context, params orderV1.GetOrderByOrderUuidParams) (orderV1.GetOrderByOrderUuidRes, error) {
	order, err := h.storage.GetOrder(params.OrderUUID)
	if err != nil {
		if errors.Is(err, notFoundError) {
			return &orderV1.NotFoundError{
				Code:    404,
				Message: fmt.Sprintf("Order with uuid: %s not found", params.OrderUUID),
			}, nil
		}
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	return order, nil
}

func (h *orderHandler) PostOrder(ctx context.Context, req *orderV1.CreateOrderRequest) (orderV1.PostOrderRes, error) {
	parts, err := h.inventoryServiceClient.ListParts(ctx, &inventoryV1.ListPartsRequest{
		Filter: &inventoryV1.PartsFilter{
			Uuids: mapUuidToStr(req.GetPartUuids()),
		},
	})
	if err != nil {
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	if len(parts.GetParts()) != len(req.GetPartUuids()) {
		return &orderV1.NotFoundError{
			Code:    404,
			Message: "Some parts not found",
		}, nil
	}

	var totalPrice float32

	for _, p := range parts.GetParts() {
		if p == nil {
			return &orderV1.InternalServerError{
				Code:    500,
				Message: "Internal server error",
			}, nil
		}

		totalPrice += float32(p.GetPrice())
	}

	uuid := uuid.New()

	err = h.storage.CreateOrder(uuid.String(), &orderV1.OrderDto{
		OrderUUID:  uuid,
		UserUUID:   req.GetUserUUID(),
		PartUuids:  req.GetPartUuids(),
		TotalPrice: totalPrice,
		Status:     orderV1.OrderStatusPENDINGPAYMENT,
	})
	if err != nil {
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	return &orderV1.CreateOrderResponse{}, nil
}

func (h *orderHandler) PostOrderPay(ctx context.Context, req *orderV1.PayOrderRequest, params orderV1.PostOrderPayParams) (orderV1.PostOrderPayRes, error) {
	order, err := h.storage.LockOrder(params.OrderUUID)
	defer h.storage.UnlockOrder(params.OrderUUID)
	if err != nil {
		if errors.Is(err, conflictError) {
			return &orderV1.ConflictError{
				Code:    409,
				Message: "Order already in payment process",
			}, nil
		}
		if errors.Is(err, notFoundError) {
			return &orderV1.NotFoundError{
				Code:    404,
				Message: fmt.Sprintf("Order with uuid: %s not found", params.OrderUUID),
			}, nil
		}
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	if order.Status == orderV1.OrderStatusPAID {
		return &orderV1.ConflictError{
			Code:    409,
			Message: "Order already paid",
		}, nil
	}

	if order.Status == orderV1.OrderStatusCANCELLED {
		return &orderV1.ConflictError{
			Code:    409,
			Message: "Order already cancelled",
		}, nil
	}

	payment, err := h.paymentServiceClient.PayOrder(ctx, &paymentV1.PayOrderRequest{
		OrderUuid:     params.OrderUUID,
		UserUuid:      order.UserUUID.String(),
		PaymentMethod: mapPaymentMethodFromOrderToPayment(req.PaymentMethod),
	})
	if err != nil {
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	h.storage.UpdateLockedOrder(params.OrderUUID, func(order *orderV1.OrderDto) {
		order.Status = orderV1.OrderStatusPAID
	})

	transactionUUID, err := uuid.Parse(payment.TransactionUuid)
	if err != nil {
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	return &orderV1.PayOrderResponse{
		TransactionUUID: transactionUUID,
	}, nil
}

func (h *orderHandler) PostOrderCancel(ctx context.Context, params orderV1.PostOrderCancelParams) (orderV1.PostOrderCancelRes, error) {
	order, err := h.storage.LockOrder(params.OrderUUID)
	defer h.storage.UnlockOrder(params.OrderUUID)
	if err != nil {
		if errors.Is(err, conflictError) {
			return &orderV1.ConflictError{
				Code:    409,
				Message: "Order already in payment process",
			}, nil
		}
		if errors.Is(err, notFoundError) {
			return &orderV1.NotFoundError{
				Code:    404,
				Message: fmt.Sprintf("Order with uuid: %s not found", params.OrderUUID),
			}, nil
		}
		return &orderV1.InternalServerError{
			Code:    500,
			Message: "Internal server error",
		}, nil
	}

	if order.Status == orderV1.OrderStatusPAID {
		return &orderV1.ConflictError{
			Code:    409,
			Message: "Order already paid",
		}, nil
	}

	if order.Status == orderV1.OrderStatusCANCELLED {
		return &orderV1.ConflictError{
			Code:    409,
			Message: "Order already cancelled",
		}, nil
	}

	h.storage.UpdateLockedOrder(params.OrderUUID, func(order *orderV1.OrderDto) {
		order.Status = orderV1.OrderStatusCANCELLED
	})

	return &orderV1.PostOrderCancelNoContent{}, nil
}

// NewError —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—É—é –æ—à–∏–±–∫—É –≤ —Ñ–æ—Ä–º–∞—Ç–µ GenericError
func (h *orderHandler) NewError(_ context.Context, err error) *orderV1.GenericErrorStatusCode {
	return &orderV1.GenericErrorStatusCode{
		StatusCode: http.StatusInternalServerError,
		Response: orderV1.GenericError{
			Code:    orderV1.NewOptInt(http.StatusInternalServerError),
			Message: orderV1.NewOptString(err.Error()),
		},
	}
}

func mapUuidToStr(uuids []uuid.UUID) []string {
	strUuids := make([]string, len(uuids))

	for i, uuid := range uuids {
		strUuids[i] = uuid.String()
	}

	return strUuids
}

func mapPaymentMethodFromOrderToPayment(pm orderV1.PaymentMethod) paymentV1.PaymentMethod {
	switch pm {
	case orderV1.PaymentMethodCARD:
		return paymentV1.PaymentMethod_PAYMENT_METHOD_CARD
	case orderV1.PaymentMethodSBP:
		return paymentV1.PaymentMethod_PAYMENT_METHOD_SBP
	case orderV1.PaymentMethodCREDITCARD:
		return paymentV1.PaymentMethod_PAYMENT_METHOD_CREDIT_CARD
	case orderV1.PaymentMethodINVESTORMONEY:
		return paymentV1.PaymentMethod_PAYMENT_METHOD_INVESTOR_MONEY
	case orderV1.PaymentMethodUNKNOWN:
		return paymentV1.PaymentMethod_PAYMENT_METHOD_UNKNOWN
	default:
		return payment_v1.PaymentMethod_PAYMENT_METHOD_UNSPECIFIED
	}
}

func main() {
	storage := NewOrderStorage()

	inventoryConn, err := grpc.NewClient(inventoryServerAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Printf("failed to inventory connect: %v\n", err)
		return
	}
	defer func() {
		if cerr := inventoryConn.Close(); cerr != nil {
			log.Printf("failed to close inventory connect: %v", cerr)
		}
	}()

	inventoryServerClient := inventoryV1.NewInventoryServiceClient(inventoryConn)

	paymentConn, err := grpc.NewClient(paymentServerAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Printf("failed to payment connect: %v\n", err)
		return
	}
	defer func() {
		if cerr := paymentConn.Close(); cerr != nil {
			log.Printf("failed to close payment connect: %v", cerr)
		}
	}()

	paymentServerClient := paymentV1.NewPaymentServiceClient(paymentConn)

	orderHandler := NewOrderHandler(storage, inventoryServerClient, paymentServerClient)

	orderServer, err := orderV1.NewServer(orderHandler)
	if err != nil {
		log.Fatalf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è —Å–µ—Ä–≤–µ—Ä–∞ OpenAPI: %v", err)
	}

	r := chi.NewRouter()

	r.Use(middleware.Logger)
	r.Use(middleware.Recoverer)
	r.Use(middleware.Timeout(10 * time.Second))

	r.Mount("/", orderServer)

	server := &http.Server{
		Addr:              net.JoinHostPort("localhost", httpPort),
		Handler:           r,
		ReadHeaderTimeout: readHeaderTimeout,
		// –ó–∞—â–∏—Ç–∞ –æ—Ç Slowloris –∞—Ç–∞–∫ - —Ç–∏–ø DDoS-–∞—Ç–∞–∫–∏, –ø—Ä–∏ –∫–æ—Ç–æ—Ä–æ–π
		// –∞—Ç–∞–∫—É—é—â–∏–π —É–º—ã—à–ª–µ–Ω–Ω–æ –º–µ–¥–ª–µ–Ω–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç HTTP-–∑–∞–≥–æ–ª–æ–≤–∫–∏, —É–¥–µ—Ä–∂–∏–≤–∞—è —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è –æ—Ç–∫—Ä—ã—Ç—ã–º–∏ –∏ –∏—Å—Ç–æ—â–∞—è
		// –ø—É–ª –¥–æ—Å—Ç—É–ø–Ω—ã—Ö —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–π –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ. ReadHeaderTimeout –ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –∑–∞–∫—Ä—ã–≤–∞–µ—Ç —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ,
		// –µ—Å–ª–∏ –∫–ª–∏–µ–Ω—Ç –Ω–µ —É—Å–ø–µ–ª –æ—Ç–ø—Ä–∞–≤–∏—Ç—å –≤—Å–µ –∑–∞–≥–æ–ª–æ–≤–∫–∏ –∑–∞ –æ—Ç–≤–µ–¥–µ–Ω–Ω–æ–µ –≤—Ä–µ–º—è.
	}

	go func() {
		log.Printf("üöÄ HTTP-—Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É %s\n", httpPort)
		err := server.ListenAndServe()
		if err != nil && !errors.Is(err, http.ErrServerClosed) {
			log.Printf("‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—É—Å–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	log.Println("üõë –ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ —Ä–∞–±–æ—Ç—ã —Å–µ—Ä–≤–µ—Ä–∞...")

	ctx, cancel := context.WithTimeout(context.Background(), shutdownTimeout)
	defer cancel()

	err = server.Shutdown(ctx)
	if err != nil {
		log.Printf("‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Å—Ç–∞–Ω–æ–≤–∫–µ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
	}

	log.Println("‚úÖ –°–µ—Ä–≤–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
}
